--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@radix-ui/react-toast": "^1.1.3",
+    "@tanstack/react-query": "^5.81.2",
     "@thirdweb-dev/chains": "^0.1",
-    "@thirdweb-dev/react": "^4",
-    "@thirdweb-dev/sdk": "^4",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
+    "@thirdweb-dev/storage": "^2.0.15",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "ethers": "^5",
+    "ethers": "^5.8.0",
     "lucide-react": "^0.214.0",
-    "react": "^18.2",
+    "react": "^18.3.1",
     "react-dom": "^18.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
+    "@types/node": "^24.0.3",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
